# Copyright © 2019 Ebraheem AlAthari
# [This program is licensed under the "MIT License"]
# Please see the file LICENSE in the source
# distribution of this software for license terms.

[package]
name = "maze-rs"
version = "0.1.0"
authors = ["Ebraheem AlAthari <alathari@pdx.edu>"]
edition = "2018"

[dependencies]
