# Copyright © 2019 - 2023 Ebraheem AlAthari
# [This program is licensed under the "MIT License"]
# Please see the file LICENSE in the source
# distribution of this software for license terms.

[package]
name = "maze_rs"
version = "0.1.0"
authors = ["Ebraheem AlAthari <alathari@pdx.edu>"]
edition = "2021"
publish = false

[dependencies]
bevy = { version = "0.10.1" , features = ["wayland"] }
rand = "0.8.5"